# Project-Movie-Clip-Uploader

./: .gitignore  README.md  ToAss.py  main.py  main1.py  pyproject.toml  test.py  token_generator.py  upload_video.py  www.youtube.com.cookies.json
Classes/: movie_handler.py  subtitle_handler.py  title_cleaner.py  uploader.py  utils.py  video_editor.py  workflows.py  youtube_downloader.py  youtube_uploader.py
Flask_Handler/: flask_handler.py
Flask_Handler/static/: script.js
static/: script.js  styles.css
templates/: index.html
test/: awdawd.py  subtitle.py
