[project]
name = "project-movie-clip-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apiclient>=1.0.4",
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.1",
    "google-api-python-client>=2.173.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "imageio-ffmpeg>=0.6.0",
    "isort>=6.0.1",
    "logging>=0.4.9.6",
    "moviepy>=2.2.1",
    "oauth2client>=4.1.3",
    "playwright>=1.52.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "srt>=3.5.3",
    "yt-dlp>=2025.6.9",
]
